<resources>
    <string name="app_name">BatFinder</string>
    <string name="title_activity_task_paige">Task Page</string>
    <string name="title_activity_map_paige">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login_paige">Login Page</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Proceed</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_info_paige_main">Scrolling Activity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="decline">Decline</string>
    <string name="agree">Accept</string>
    <string name="Disclaimer_txt">Disclaimer</string>
    <string name="guest_login">Guest</string>
    <string name="admin_login">Login</string>
    <string name="feedback_btn">Provide Feedback</string>
    <string name="todo1">TODO</string>
    <string name="app_title">Bat Finder UK</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logo_sm">logo</string>
    <string name="Welcome">Welcome Back</string>
    <string name="signin">Sign in to continue</string>
    <string name="forgot_pw">Forgot Password?</string>
    <string name="signup_btn">Become a Volunteer</string>
    <string name="info_btn">Bat Info</string>
    <string name="feedback_info_btn">Submit Feedback</string>
    <string name="report_btn">Report a Bat Sighting</string>
    <string name="map_btn">View Sightings Map</string>
    <string name="logo1">logo</string>
    <string name="logo_report">logo_report</string>
    <string name="sighting_details">Sighting Details</string>
    <string name="report_header">Report a Bat Sighting</string>
    <string name="task_txt">What would you like to do?</string>

    <!-- Submit Report Sighting Type Drop Down Options -->
    <string name="sightingtype1">In Flight</string>
    <string name="sightingtype2">Roost</string>
    <string name="sightingtype3">Swarming</string>
    <string name="sightingtype4">Bat Box</string>
    <string name="sightingtype5">Display Perch</string>

    <!-- Submit Report Bat Species Drop Down Options -->
    <string name="bat1">Alcathoe</string>
    <string name="bat2">Barbastelle</string>
    <string name="bat3">Bechstein</string>
    <string name="bat4">Brandt</string>
    <string name="bat5">Brown long-eared</string>
    <string name="bat6">Common pipistrelle</string>
    <string name="bat7">Daubenton</string>
    <string name="bat8">Great horseshoe</string>
    <string name="bat9">Grey long-eared</string>
    <string name="bat10">Leisler</string>
    <string name="bat11">Lesser horsehoe</string>
    <string name="bat12">Nathusius</string>
    <string name="bat13">Natterer</string>
    <string name="bat14">Noctule</string>
    <string name="bat15">Serotine</string>
    <string name="bat16">Soprano pipistrelle</string>
    <string name="bat17">Whiskered</string>
    <string name="reportdata">Date</string>
    <string name="sightingtype">sightingtype</string>
    <string name="battype">battype</string>

    <!-- Submit Report Sighting Dropdown Array -->
    <string-array name="sightingtypelist">
        <item>@string/sightingtype1</item>
        <item>@string/sightingtype2</item>
        <item>@string/sightingtype3</item>
        <item>@string/sightingtype4</item>
        <item>@string/sightingtype4</item>
    </string-array>

    <!-- Submit Report Bat Species Options -->
    <string-array name="battypelist">
        <item>@string/bat1</item>
        <item>@string/bat2</item>
        <item>@string/bat3</item>
        <item>@string/bat4</item>
        <item>@string/bat5</item>
        <item>@string/bat5</item>
        <item>@string/bat6</item>
        <item>@string/bat6</item>
        <item>@string/bat7</item>
        <item>@string/bat8</item>
        <item>@string/bat9</item>
        <item>@string/bat10</item>
        <item>@string/bat11</item>
        <item>@string/bat12</item>
        <item>@string/bat13</item>
        <item>@string/bat14</item>
        <item>@string/bat15</item>
        <item>@string/bat16</item>
        <item>@string/bat17</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sightingdetail">Sighting Details</string>
    <string name="bat_logo_reportpage">logo_report_page</string>


</resources>